WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309711
[iOS] Unable to select AirPlay route prior to playing a video
https://bugs.webkit.org/show_bug.cgi?id=309711
Summary
[iOS] Unable to select AirPlay route prior to playing a video
Andy Estes
Reported
2026-03-11 13:31:06 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2026-03-11 13:31:07 PDT
<
rdar://problem/170356272
>
Andy Estes
Comment 2
2026-03-11 13:34:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60390
EWS
Comment 3
2026-03-16 20:13:17 PDT
Committed
309371@main
(43b9e770e013): <
https://commits.webkit.org/309371@main
> Reviewed commits have been landed. Closing PR #60390 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug