[iOS] Unable to select AirPlay route prior to playing a video https://bugs.webkit.org/show_bug.cgi?id=309711 rdar://170356272

Reviewed by Jer Noble and Eric Carlson.

Updated MediaSessionManagerCocoa to use a long-form route sharing policy unconditionally so that
users can configure an AirPlay route prior to starting audible media playback. Updated
WKAirPlayRoutePicker to configure its MPMediaControlsViewController such that it can find WebKit's
audio session in the GPU process.

* Source/WebCore/platform/audio/cocoa/MediaSessionManagerCocoa.mm:
(WebCore::MediaSessionManagerCocoa::updateSessionState):
* Source/WebKit/Configurations/AllowedSPI.toml:
* Source/WebKit/UIProcess/ios/forms/WKAirPlayRoutePicker.mm:
(-[WKAirPlayRoutePicker showFromView:routeSharingPolicy:routingContextUID:hasVideo:]):

Canonical link: https://commits.webkit.org/309371@main